# shell-waitpid

./: README.md  package.json  setup.cfg
scripts/: waitpid
tests/shell-waitpid/examples/: waitpid.sh
